Fixed compilation on java17